--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang='en'>
   <head>
+    <title>Thimmy Stenlund</title>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
   </head>
   <body>
-
+    <h1>Hello, code school!</h1>
+    <ul>
+      <li>
+        C#
+      </li>
+      <li>
+        JavaScript
+      </li>
+    </ul>
   </body>
 </html>
